Bug #351 : align last news to left

--- a/coop_local/static/css/objects/slideshow.less
+++ b/coop_local/static/css/objects/slideshow.less
@@ -13,7 +13,7 @@
 .carousel-inner {
 	> .item {
 		.clearfix();
-		text-align: center;
+		text-align: left;
 		.transition(~"left 0.6s ease-in-out, opacity 0.5s ease-in-out");
 	}
 
