--- a/coop_local/static/css/theme-npdc.css
+++ b/coop_local/static/css/theme-npdc.css
@@ -1733,7 +1733,7 @@ body.modal-open {
   margin-bottom: 10px;
 }
 .carousel-inner > .item {
-  text-align: center;
+  text-align: left;
   -webkit-transition: left 0.6s ease-in-out, opacity 0.5s ease-in-out;
   transition: left 0.6s ease-in-out, opacity 0.5s ease-in-out;
 }
